# MessengerMin

./: CMakeLists.txt  README.md  docker-compose.yml  run_all_tests.sh  run_db.sh
db/: chat_repository.cpp  chat_repository.hpp  connection_pool.hpp  create_tables.sql  database.hpp  db_queries.hpp  message_repository.cpp  message_repository.hpp  user_repository.cpp  user_repository.hpp
dto/: chat_info.hpp  message_data.hpp
src/: app_context.hpp  config.hpp
src/middleware/: auth_middleware.cpp  auth_middleware.hpp
test/: test_chat_repository.cpp  test_message_repository.cpp  test_user_repository.cpp
utils/: crypto_utils.hpp
